third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_combo_invalid.exp

Diagnostics:
error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_combo_invalid.move:14:9
   │
13 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ---- field `g` previously borrowed here
   │                       │
   │                       field `f` previously borrowed here
14 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
15 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_combo_invalid.move:23:9
   │
22 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- field `f` previously mutably borrowed here
23 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_combo_invalid.move:32:9
   │
31 │         if (cond) f = s else f = other; // error in v2 because s is copied
   │                   ----- previously mutably borrowed here
32 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
33 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_combo_invalid.move:41:9
   │
40 │         if (cond) f = id_mut(s) else f = other;
   │                       --------- previously mutably borrowed here
41 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
42 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_combo_invalid.move:49:19
   │
48 │         let f = &s.f;
   │                 ---- field `f` previously borrowed here
49 │         if (cond) *s = S { f: 0, g: 0 };
   │                   ^^^^^^^^^^^^^^^^^^^^^ write attempted here
50 │         *f;
   │         -- conflicting reference `f` used here
